#656 call DomainHandler.delete() first